# Python-Playground

./: .gitignore  Dockerfile  Makefile  Notes.txt  Test.py  commands.txt  employee.csv  pyproject.toml
Airflow-Playground/: Rocket.py
BasicPython/: CSV_Reader_Writer.py  Concurrent_Future_demo.py  ContextManagerDemo.py  DateTimeModule.py  Decorator_Arguments.py  Decorators.py  Download_YouTube_Video.py  DuckTyping.py  ElseLoop.py  EnumerateDemo.py  FileObject.py  FutureDatesDemo.py  Generators.py  GeneratorsMemoryExample.py  Itertools.py  ListComprehensions.py  LogRotation.py  Logging_Advanced.py  Logging_Basic.py  MemProfile.py  Multiprocessing_demo.py  NamedTuple.py  OOP.py  OOP_ClassAndStaticMethod.py  OOP_InheritanceAndSubclasses.py  OOP_PropertyDecorator.py  OOP_Special_Dunder_Method.py  OS.py  Package_Collections.py  Package_Itertool.py  Package_Typing.py  Random_Demo.py  RegularExpression.py  Request_Demo.py  SlicingListAndStrings.py  Sorting.py  SqlLite3_Demo.py  SqlLite3_Employee.py  StringFormatting.py  Subprocess_Demo.py  (+4 more)
Common/: Tags.py  Util.py
DSA/: DivCount.py  MaxProductOfThree.py  MaxSubArray.py  MissingElement.py  NumberofDiskIntersection.py  PassingCars.py  TapeEquilibrium.py
Design_Patterns/: Behavior.py  Factory.py
FastAPI/: consume.py  dummy.py
FluentPython/: Ch02_ArrayOfSequence.py  Ch02_SpecialMethods.py  Ch03_DemoFile.txt  Ch03_DictionariesAndSets.py  Ch07_FirstClassFunc.py  Test.py
Numpy/: basic.py  basic_random.py
Pandas/: DataAnalysis.py
Programming/: MOD_of_number.py
Prometheus-Playground/: Pushgateway_Demo.py  gauge.py  (+1 more)
(+588 files in other folders)
