[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-playground"
version = "0.1.0"
description = "Python algorithms, data structures, and coding practice"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["Common*", "CodingPlatform*", "DataStructures*", "Design_Patterns*"]
